--- a/Revisiones/MMP_Responses to the reviewers.tex
+++ b/Revisiones/MMP_Responses to the reviewers.tex
@@ -30,7 +30,7 @@ We are grateful to the reviewers for taking their time  to review our work. Thei
 
 \item \textit{Please include a nomenclature in alphabetic order: Latin, Greek, Acronyms.}\\
 
-Done.
+Done. Unfortunately, the \LaTeX package ''glossaries" print the nomenclature in the order : Greek, Latin, Acronyms. 
  
 \item \textit{Reduce the list of references to the essential papers only..}\\
 
